# substrate-weight-compare

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  MAINTAIN.md  Makefile  README.md  compare.sh  docker-compose.yml  rust-toolchain  rust-toolchain.toml
.github/: mlc_config.json
.github/workflows/: cargo_install.yml  ci.yml  docker.yml  markdown.yml  meta.yml  polkadot_locked.yml  polkadot_master.yml  rust.yml  toml.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: swc_works.rs
core/: Cargo.toml
core/benches/: parse.rs  term.rs
core/src/: compare.rs  lib.rs  scope.rs  term.rs  testing.rs  traits.rs
core/src/parse/: mod.rs  overhead.rs  pallet.rs  storage.rs
core/src/test/: core.rs  mod.rs  pallet.rs  storage.rs  term.rs
core/src/test/parse/: helper.rs  integration.rs  mod.rs  overhead.rs  pallet.rs  storage.rs
src/: cli.rs  lib.rs  main.rs  parse.rs  scope.rs  term.rs  web.rs
src/parse/: database.rs  extrinsic.rs  mod.rs  overhead.rs  pallet.rs  storage.rs
src/test/: database.rs  extrinsic.rs  mod.rs  pallet.rs  parse.rs  storage.rs
test_data/new/: paritydb_weights.rs.txt  rocksdb_weights.rs.txt
tests/: common.rs  polkadot_parse.rs  swc_web_works.rs  swc_works.rs
tests/parse/: common.rs  helper.rs  integration_tests.rs  mod.rs  polkadot.rs
web/: Cargo.toml
web/src/: git.rs  html.rs  main.rs
web/static/: common.js  darkmode.js  default_params.js  dummy-mrs.json  loading_anim.css  merge_requests.js  root.css  root.js  table.css  table.js
web/templates/: compare.stpl  error.stpl  header.stpl  merge_requests.stpl  root.stpl  table.js
web/tests/: swc_web_works.rs
