cargo-features = ["strip"]

[workspace.package]
edition = "2021"
authors = ["Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>"]
version = "3.4.2"
repository = "https://github.com/ggwpez/substrate-weight-compare"
readme = "README.md"
keywords = [ "polkadot", "substrate", "blockchain" ]
license = "GPL-3.0-only"
description = "Compare weight files of the Substrate blockchain SDK."

[workspace]
members = [
	"core",
	"cli",
	"web"
]

resolver = "2"

[workspace.dependencies]
subweight-core = { version = "3.4.2", path = "core" }

clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
sailfish = { version = "0.8.3" }

[profile.test-release]
inherits = "release"
lto = "off"
opt-level = 3
incremental = true
debug-assertions = true

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
