[workspace.package]
edition = "2021"
authors = ["Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>"]
version = "3.4.3"
repository = "https://github.com/ggwpez/substrate-weight-compare"
readme = "README.md"
keywords = [ "polkadot", "substrate", "blockchain" ]
license = "GPL-3.0-only"
description = "Compare weight files of the Substrate blockchain SDK."

[workspace]
members = [
	"core",
	"cli",
	"web"
]

resolver = "2"

[workspace.dependencies]
subweight-core = { version = "3.4.3", path = "core" }

clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
sailfish = { version = "0.8.3" }

[profile.test-release]
inherits = "release"
lto = "off"
opt-level = 3
incremental = true
debug-assertions = true

[profile.production]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
opt-level = "z"
