[package]
name = "subweight"

edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[features]
polkadot = []

[dependencies]
subweight-core.workspace = true

env_logger.workspace = true
log.workspace = true
clap.workspace = true

syn = { version = "2.0.28", features = ["parsing", "full"] }
comfy-table = { version = "7.0.1", default-features = false }
serde = { version = "1.0.180", features = [ "derive" ] }

[dev-dependencies]
assert_cmd = "2.0.12"
serial_test = "2.0.0"
