[package]
name = "subweight"

edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[features]
polkadot = []

[dependencies]
subweight-core.workspace = true

env_logger.workspace = true
log.workspace = true
clap.workspace = true

syn = { version = "2.0.98", features = ["parsing", "full"] }
comfy-table = { version = "7.1.4", default-features = false }
serde = { version = "1.0.218", features = [ "derive" ] }
fancy-regex = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.16"
serial_test = "3.2.0"
