[package]
name = "swc_core"
version = "1.1.1"
edition = "2021"
authors = ["Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "term"
harness = false

[features]
# These are only used for integration tests.
version-locked-tests = []
polkadot = []
substrate = []
cumulus = []
acala = []
astar = []
moonbeam = []
composable = []
chain = []

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
fancy-regex = "0.10.0"
git-version = "0.3.5"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.16"
proc-macro2 = "1.0.36"
semver = "1.0.9"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"
syn = { version = "1.0.91", features = ["parsing", "full"] }

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }
rstest = "0.12.0"
serial_test = "*"
