[package]
name = "swc_core"
version = "1.2.0"
edition = "2021"
authors = ["Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "term"
harness = false

[features]
# These are only used for integration tests.
version-locked-tests = []
polkadot = []
substrate = []
cumulus = []
acala = []
astar = []
moonbeam = []
composable = []
chain = []
# Use for tests or where you need additional convenience derives.
bloat = []

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
fancy-regex = "0.11.0"
git-version = "0.3.5"
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
proc-macro2 = "1.0.51"
semver = "1.0.16"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
syn = { version = "1.0.107", features = ["parsing", "full"] }

[dev-dependencies]
criterion = { version = "0.4", features = [ "html_reports" ] }
rstest = "0.16.0"
serial_test = "*"

# Work-around for <https://github.com/rust-lang/cargo/issues/2911>
swc_core = { path = ".", features = ["bloat"] }
