[package]
name = "subweight-core"

edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "term"
harness = false

[features]
# These are only used for integration tests.
version-locked-tests = []
polkadot = []
substrate = []
cumulus = []
acala = []
astar = []
moonbeam = []
composable = []
chain = []
# Use for tests or where you need additional convenience derives.
bloat = []

[dependencies]
clap.workspace = true
log.workspace = true

fancy-regex = "0.11.0"
git-version = "0.3.5"
glob = "0.3.1"
lazy_static = "1.4.0"
proc-macro2 = "1.0.58"
semver = "1.0.17"
serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = "1.0.96"
syn = { version = "2.0.16", features = ["parsing", "full"] }

[dev-dependencies]
criterion = { version = "0.5", features = [ "html_reports" ] }
rstest = "0.17.0"
serial_test = "2.0.0"
maplit = "1.0.2"

# Work-around for <https://github.com/rust-lang/cargo/issues/2911>
subweight-core = { path = ".", features = ["bloat"] }
