[package]
name = "subweight-web"

edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "subweight-web"
path = "src/main.rs"

[features]
polkadot = []

[dependencies]
subweight-core.workspace = true

clap.workspace = true
env_logger.workspace = true
log.workspace = true
sailfish.workspace = true

actix-web = { version = "4.5.1", features = ["openssl"] }
actix-files = "0.6.5"
lazy_static = "1.4.0"
openssl = { version = "0.10", features = ["v110"] }
syn = { version = "2.0.55", features = ["parsing", "full"] }
serde = { version = "1.0.197", features = [ "derive" ] }
badge-maker = "0.3.1"
dashmap = "5.5.3"
cached = "0.49.2"
fancy-regex = "0.13.0"
html-escape = "0.2.13"

[dev-dependencies]
assert_cmd = "2.0.14"
serial_test = "3.0.0"
reqwest = { version = "0.12.2", default-features = false, features = ["blocking"] }
tempfile = "3.10.1"
rstest = { version = "0.18.2", default-features = false }
