[package]
name = "subweight-web"

edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "subweight-web"
path = "src/main.rs"

[features]
polkadot = []

[dependencies]
subweight-core.workspace = true

clap.workspace = true
env_logger.workspace = true
log.workspace = true
sailfish.workspace = true

actix-web = { version = "4.9.0", features = ["openssl"] }
actix-files = "0.6.6"
lazy_static = "1.5.0"
openssl = { version = "0.10", features = ["v110"] }
syn = { version = "2.0.98", features = ["parsing", "full"] }
serde = { version = "1.0.218", features = [ "derive" ] }
badge-maker = "0.3.1"
dashmap = "6.1.0"
cached = "0.54.0"
fancy-regex = "0.14.0"
html-escape = "0.2.13"

[dev-dependencies]
assert_cmd = "2.0.16"
serial_test = "3.2.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking"] }
tempfile = "3.17.1"
rstest = { version = "0.24.0", default-features = false }
